# borealis_template

./: CMakeLists.txt  Makefile  README.md
demo/include/activity/: main_activity.hpp
demo/src/: main.cpp
demo/src/tab/: components_tab.cpp  recycling_list_tab.cpp  settings_tab.cpp  text_test_tab.cpp  transform_tab.cpp
demo/src/view/: captioned_image.cpp  pokemon_view.cpp
resources/i18n/zh-Hans/: demo.json
